--- a/hcga/Operations/operations.yaml
+++ b/hcga/Operations/operations.yaml
@@ -5,18 +5,21 @@ BasicStats:
   classname: BasicStats
   shortname: BS
   keywords:
+  calculation_speed:
 
 Triangles:
   filename: triangles
   classname: Triangles
   shortname: TS
   keywords:
+  calculation_speed:
 
 DegreeCentrality_bin10:
   filename: centrality_degree
   classname: DegreeCentrality
   shortname: DC
   keywords:
+  calculation_speed:
   bins: 10
 
 DegreeCentrality_bin20:
@@ -24,6 +27,7 @@ DegreeCentrality_bin20:
   classname: DegreeCentrality
   shortname: DC
   keywords:
+  calculation_speed:
   bins: 20
 
 DegreeCentrality_bin50:
@@ -31,4 +35,5 @@ DegreeCentrality_bin50:
   classname: DegreeCentrality
   shortname: DC
   keywords:
+  calculation_speed:
   bins: 50
