--- a/hcga/Operations/operations.yaml
+++ b/hcga/Operations/operations.yaml
@@ -150,7 +150,34 @@ EigenCentrality_bin50:
   calculation_speed:
   precomputed: True
   bins: 50
+  
+KatzCentrality_bin10:
+  filename: centrality_katz
+  classname: KatzCentrality
+  shortname: KC
+  keywords:
+  calculation_speed:
+  precomputed: False
+  bins: 10
 
+KatzCentrality_bin20:
+  filename: centrality_katz
+  classname: KatzCentrality
+  shortname: KC
+  keywords:
+  calculation_speed:
+  precomputed: False
+  bins: 20
+
+KatzCentrality_bin50:
+  filename: centrality_katz
+  classname: KatzCentrality
+  shortname: KC
+  keywords:
+  calculation_speed:
+  precomputed: False
+  bins: 50
+    
 CommunitiesModularity:
   filename: communities_modularity
   classname: ModularityCommunities
