added k components feature

--- a/hcga/Operations/operations.yaml
+++ b/hcga/Operations/operations.yaml
@@ -380,4 +380,12 @@ PageRank10:
   calculation_speed:
   precomputed: False
   bins: 10
+  
+kComponents:
+  filename: k_components
+  classname: kComponents
+  shortname: kC
+  keywords:
+  calculation_speed:
+  precomputed: False
 
