--- a/hcga/Operations/operations.yaml
+++ b/hcga/Operations/operations.yaml
@@ -24,32 +24,13 @@ DegreeCentrality:
   calculation_speed:
   precomputed: False
 
-BetweennessCentrality_bin10:
+BetweennessCentrality:
   filename: centrality_betweenness
   classname: BetweennessCentrality
   shortname: BC
   keywords:
   calculation_speed:
   precomputed: False
-  bins: 10
-  
-BetweennessCentrality_bin20:
-  filename: centrality_betweenness
-  classname: BetweennessCentrality
-  shortname: BC
-  keywords:
-  calculation_speed:
-  precomputed: False
-  bins: 20
-  
-BetweennessCentrality_bin50:
-  filename: centrality_betweenness
-  classname: BetweennessCentrality
-  shortname: BC
-  keywords:
-  calculation_speed:
-  precomputed: False
-  bins: 50
   
 EdgeBetweennessCentrality_bin10:
   filename: centrality_edge_betweenness
@@ -266,32 +247,13 @@ Cycles:
   calculation_speed:
   precomputed: False
   
-AverageNeighborDegree_bin10:
+AverageNeighborDegree:
   filename: average_neighbor_degree
   classname: AverageNeighborDegree
   shortname: ND
   keywords:
   calculation_speed:
   precomputed: False
-  bins: 10
-  
-AverageNeighborDegree_bin20:
-  filename: average_neighbor_degree
-  classname: AverageNeighborDegree
-  shortname: ND
-  keywords:
-  calculation_speed:
-  precomputed: False
-  bins: 20
-  
-AverageNeighborDegree_bin50:
-  filename: average_neighbor_degree
-  classname: AverageNeighborDegree
-  shortname: ND
-  keywords:
-  calculation_speed:
-  precomputed: False
-  bins: 50
   
 Cliques:
   filename: cliques
