moved bins and made changes to closeness centrality

--- a/hcga/Operations/operations.yaml
+++ b/hcga/Operations/operations.yaml
@@ -59,32 +59,13 @@ EdgeBetweennessCentrality_bin50:
   precomputed: False
   bins: 50
   
-ClosenessCentrality_bin10:
+ClosenessCentrality:
   filename: centrality_closeness
   classname: ClosenessCentrality
   shortname: CC
   keywords:
   calculation_speed:
   precomputed: False
-  bins: 10
-  
-ClosenessCentrality_bin20:
-  filename: centrality_closeness
-  classname: ClosenessCentrality
-  shortname: CC
-  keywords:
-  calculation_speed:
-  precomputed: False
-  bins: 20
-  
-ClosenessCentrality_bin50:
-  filename: centrality_closeness
-  classname: ClosenessCentrality
-  shortname: CC
-  keywords:
-  calculation_speed:
-  precomputed: False
-  bins: 50
     
 EigenCentrality_bin10:
   filename: centrality_eigenvector
