--- a/docs/Makefile
+++ b/docs/Makefile
@@ -16,6 +16,9 @@ help:
 
 .PHONY: help Makefile
 
+full: html 
+	cd $(BUILDDIR)/html; git add . ; git commit -m "rebuilt docs"; git push origin gh-pages
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
