--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ hcga\.egg-info/
 hcga/__pycache__/
 
 hcga/Operations/__pycache__/
+
+hcga/TestData/__pycache__/
+
+hcga/\.ipynb_checkpoints/
+
+hcga/TestData/feature_set\.pkl
