--- a/.pylintrc
+++ b/.pylintrc
@@ -2,26 +2,11 @@
 # for some of the options that are available
 
 [MESSAGES CONTROL]
-#C0103 -  Invalid name "%s" (should match %s) - matches too many things, like variables w/ single char names
-#R0904 - Too Many public methods
-#R0903 - Too Few public methods
-#W0511 - TODO in code
-#W0232 - Class has no __init__ method
-#R0922 - Abstract class is only referenced 1 times
-#R0801 - Similar lines in %d files
-#R0921 - Abstract class not referenced
-#W0141 - Used builtin function 'map'
-#R0401 - cyclic-import
-#I0013 - Ignore the 'Ignoring entire file' warning
-#W0142 - Used * or ** magic
-#W0622 - redefined-builti
-#C0325 - superfluous-parens
-#R0205 - useless-object-inheritance
-disable=C0103,R0904,R0903,W0511,W0232,R0922,R0801,R0921,W0141,R0401,I0013,W0142,W0622,C0325,R0205,C0330,W0108,W0640
+disable=C0103,R0904,R0903,W0511,W0232,R0922,R0801,R0921,W0141,R0401,I0013,W0142,W0622,C0325,R0205,C0330,W0108,W0640,W0201
 
 [FORMAT]
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=120
 
 [DESIGN]
 # Maximum number of arguments for function / method
@@ -67,5 +52,4 @@ ignore-docstrings=yes
 # (useful for modules/projects where namespaces are manipulated during runtime
 # and thus existing member attributes cannot be deduced by static analysis. It
 # supports qualified module names, as well as Unix pattern matching.
-ignored-modules=numpy,numpy.*,scipy.stats,scipy.spatial,morphio,neurom,seaborn
-extension-pkg-whitelist=morphio
+ignored-modules=numpy,numpy.*,
