--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: false
 language: python
-python:
-    - "3.7"
+matrix:
+  include:
+    - python: 3.7
+      env: TOXENV=lint,py37
 install: pip install tox-travis
 script: tox
