small bugs + format

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,13 @@ commands =
     pycodestyle --exclude=tests hcga 
     pylint --ignore=tests hcga
 
+[testenv:format]
+deps = black
+commands =
+    black {[base]name}
+    black tests
+
+
 [testenv:coverage]
 deps =
     {[base]testdeps}
