--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,7 +2,7 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    =
+SPHINXOPTS    = # -W  # treats warning as srrors
 SPHINXBUILD   = sphinx-build
 SPHINXPROJ    = hcga
 SOURCEDIR     = source
