--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ testdeps =
 envlist =
     lint
     py37
+    docs
 
 [testenv]
 deps = {[base]testdeps}
@@ -37,6 +38,16 @@ deps =
 commands =
           nosetests -v --with-coverage --cover-min-percentage=1 --cover-erase --cover-package hcga 
 
+[testenv:docs]
+changedir = doc
+deps = 
+    sphinx
+    alabaster
+commands = make html
+whitelist_externals = make
+
 [pycodestyle]
 ignore=W503,E731,W605
 max-line-length=120
+
+
