--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ basepython = python3
 deps =
     pycodestyle
     astroid==2.1.0
-    pylint==2.2.2
+    pylint=>2.5.3
 commands =
     pycodestyle --exclude=tests hcga 
     pylint --ignore=tests hcga
