--- a/.pylintrc
+++ b/.pylintrc
@@ -2,7 +2,7 @@
 # for some of the options that are available
 
 [MESSAGES CONTROL]
-disable=C0103,R0904,R0903,W0511,W0232,R0922,R0801,R0921,W0141,R0401,I0013,W0142,W0622,C0325,R0205,C0330,W0108,W0640,W0201,W1401,C0415
+disable=C0103,R0904,R0903,W0511,W0232,R0922,R0801,R0921,W0141,R0401,I0013,W0142,W0622,C0325,R0205,C0330,W0108,W0640,W0201,W1401,C0415,C0112
 
 [FORMAT]
 # Maximum number of characters on a single line.
