--- a/.github/workflows/run-tox.yml
+++ b/.github/workflows/run-tox.yml
@@ -1,8 +1,10 @@
 name: Run all tox python3
 
 on:
-  push:
   pull_request:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -10,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9, 3.10]
 
     steps:
     - uses: actions/checkout@v2
