--- a/tox.ini
+++ b/tox.ini
@@ -55,3 +55,9 @@ max-line-length=120
 [isort]
 line_length=100
 profile=black
+
+[gh-actions]
+python =
+  3.8: py38, lint
+  3.9: py39
+  3.10: py310, docs
