--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ envlist =
     py3
     docs
 
+
 [testenv]
 deps = {[base]testdeps}
 commands = pytest
@@ -46,7 +47,7 @@ deps =
     sphinx
     alabaster
 commands = make html
-whitelist_externals = make
+allowlist_externals = make
 
 [pycodestyle]
 ignore=W503,E731,W605
@@ -55,3 +56,9 @@ max-line-length=120
 [isort]
 line_length=100
 profile=black
+
+[gh-actions]
+python =
+  3.8: py38, lint
+  3.9: py39
+  3.10: py310
