--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,7 @@ testdeps =
 [tox]
 envlist =
     lint
-    isort
-    py3
+    py{38,39,310,311}
     docs
 
 
@@ -60,5 +59,6 @@ profile=black
 [gh-actions]
 python =
   3.8: py38, lint
-  3.9: py39
+  3.9: py39, docs
   3.10: py310
+  3.11: py311
